--- a/src/main/webapp/sass/style.scss
+++ b/src/main/webapp/sass/style.scss
@@ -5,3 +5,6 @@
 @import "compass/css3/box-shadow";
 @import "compass/css3/box-sizing";
 @import "compass/css3/transform";
+
+
+body { padding-bottom: 70px; }
