--- a/src/main/webapp/fragments/profile.html
+++ b/src/main/webapp/fragments/profile.html
@@ -1,5 +1,46 @@
-<div id="profile">
-    
-    <h1>Profile</h1>
-    
+<div id="profile" class="row">
+    <div class="col-md-3">
+        <div class="highlight">
+            <pre>
+                <img src="" height="300">
+            </pre> 
+        </div>
+    </div>
+    <div class="col-md-9">
+        <form class="bs-example" role="form">
+            <div class="form-group">
+                <label for="login">Логін *</label>
+                <input type="text" name="login" class="form-control" id="login" placeholder="Логін">
+            </div>
+            <div class="form-group">
+                <label for="email">Email *</label>
+                <input type="email" name="email" class="form-control" id="email" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <label for="firstname">Ім'я *</label>
+                <input type="text" name="firstname" class="form-control" id="firstname" placeholder="Ім'я">
+            </div>
+            <div class="form-group">
+                <label for="lastname">Прізвище *</label>
+                <input type="text" name="lastname" class="form-control" id="lastname" placeholder="Прізвище">
+            </div>
+            <div class="form-group">
+                <label for="telephone">Номер телефону *</label>
+                <input type="text" name="telephone" class="form-control" id="telephone" placeholder="Номер телефону">
+            </div>
+            <div class="form-group">
+                <label for="adress">Адреса *</label>
+                <input type="text" name="adress" class="form-control" id="adress" placeholder="Адреса">
+            </div>
+            <div class="form-group">
+                <label for="password">Пароль *</label>
+                <input type="password" name="password"  class="form-control" id="password" placeholder="Пароль">
+            </div>
+            <div class="form-group">
+                <label for="password2">Підтвердіть пароль *</label>
+                <input type="password" name="password2" class="form-control" id="password2" placeholder="Підтвердіть пароль">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 </div>
