--- a/src/main/webapp/sass/style.scss
+++ b/src/main/webapp/sass/style.scss
@@ -6,7 +6,20 @@
 @import "compass/css3/box-sizing";
 @import "compass/css3/transform";
 
+@font-face {
+    font-family: 'Glyphicons Halflings';
+    src: url('../fonts/glyphicons-halflings-regular.eot');
+    src: url('../fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-halflings-regular.woff') format('woff'), url('../fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('../fonts/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
+}
 
-body { padding-top: 50px; }
+body { padding-top: 70px; }
 
 #login { margin-top: 1em; }
+
+.navbar-right strong { margin-left: 10px; }
+
+.snippets { display: none; }  
+
+.bs-example { border-style: solid; padding: 15px 15px 15px 15px; margin-left: 0; margin-right: 0; background-color: #fff; border-width: 1px; border-color: #ddd; border-radius: 4px 4px 0 0; box-shadow: none; }
+
+.error { color: red; }
