--- a/src/main/webapp/sass/style.scss
+++ b/src/main/webapp/sass/style.scss
@@ -14,8 +14,6 @@
 
 body { padding-top: 70px; }
 
-#login { margin-top: 1em; }
-
 .navbar-right strong { margin-left: 10px; }
 
 .snippets { display: none; }  
@@ -23,3 +21,5 @@ body { padding-top: 70px; }
 .bs-example { border-style: solid; padding: 15px 15px 15px 15px; margin-left: 0; margin-right: 0; background-color: #fff; border-width: 1px; border-color: #ddd; border-radius: 4px 4px 0 0; box-shadow: none; }
 
 .error { color: red; }
+
+.docs { margin-top: 1em; }
