--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -41,3 +41,64 @@ body {
 .docs {
   margin-top: 1em;
 }
+
+/* line 27, ../sass/style.scss */
+table {
+  border-collapse: collapse;
+}
+
+/* line 29, ../sass/style.scss */
+.percent {
+  position: absolute;
+  width: 300px;
+  height: 14px;
+  z-index: 1;
+  text-align: center;
+  font-size: 0.8em;
+  color: white;
+}
+
+/* line 31, ../sass/style.scss */
+.progress-bar {
+  width: 300px;
+  height: 14px;
+  border-radius: 10px;
+  border: 1px solid #cccccc;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#6666cc), to(#4b4b95));
+  border-image: initial;
+}
+
+/* line 33, ../sass/style.scss */
+.uploaded {
+  padding: 0;
+  height: 14px;
+  border-radius: 10px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#66cc00), to(#4b9500));
+  border-image: initial;
+}
+
+/* line 35, ../sass/style.scss */
+.dropbox {
+  width: 100%;
+  height: 3em;
+  border: 2px solid #dddddd;
+  border-radius: 8px;
+  background-color: #FEFFEC;
+  text-align: center;
+  color: #BBB;
+  font-size: 2em;
+  font-family: Arial, sans-serif;
+}
+/* line 36, ../sass/style.scss */
+.dropbox span {
+  margin-top: 0.9em;
+  display: block;
+}
+/* line 37, ../sass/style.scss */
+.dropbox.not-available {
+  background-color: #F88;
+}
+/* line 38, ../sass/style.scss */
+.dropbox.over {
+  background-color: #bfb;
+}
