Added new user fields

--- a/src/main/webapp/fragments/profile.html
+++ b/src/main/webapp/fragments/profile.html
@@ -92,6 +92,7 @@
                     <div class="form-group">
                         <label for="shclude">Графіік роботи *</label>
                         <input type="text" name="shclude" class="form-control" id="shclude" placeholder="Графіік роботи">
+                         <p class="help-block">Приклад формату 8:30-18:30</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -117,10 +118,6 @@
                     <div class="form-group">
                         <label for="login">Логін *</label>
                         <input type="text" name="login" class="form-control" id="login" placeholder="Логін">
-                    </div>
-                    <div class="form-group">
-                        <label for="adress">Адреса *</label>
-                        <input type="text" name="adress" class="form-control" id="adress" placeholder="Адреса">
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -156,6 +153,7 @@
             </div>
         </div>
         <div class="row">
+            <hr>
             <div class="col-md-4">
                 <input type="file" name="docUpload" class="">
             </div>
@@ -165,6 +163,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
+                <hr>
                 <button type="submit" class="btn btn-primary">Зберегти</button>
             </div>
         </div>
