--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -102,3 +102,20 @@ table {
 .dropbox.over {
   background-color: #bfb;
 }
+
+/* line 41, ../sass/style.scss */
+input[type="range"].form-control {
+  margin-left: 10px;
+  width: auto;
+  height: auto;
+  padding: 0;
+  font-size: 0;
+  line-height: auto;
+  vertical-align: middle;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
