--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -119,3 +119,14 @@ input[type="range"].form-control {
   -moz-box-shadow: none;
   box-shadow: none;
 }
+
+/* line 43, ../sass/style.scss */
+#profile .highlight img {
+  width: 100%;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 0px 5px #333333;
+  -moz-box-shadow: 0px 0px 5px #333333;
+  box-shadow: 0px 0px 5px #333333;
+}
