--- a/src/main/webapp/fragments/profile.html
+++ b/src/main/webapp/fragments/profile.html
@@ -2,7 +2,7 @@
     <div class="col-md-3">
         <div class="highlight">
             <pre>
-                <img src="" height="300">
+                <img src="" height="300" class="hidden">
             </pre> 
         </div>
         <form class="userImage" enctype="multipart/form-data" method="POST" action="">
@@ -142,7 +142,7 @@
                 </div>
             </div>
         </form>
-        <div class="row">
+<!--        <div class="row">
             <div class="col-md-12">
                 <h3>Скановані документи</h3>
                 <hr>
@@ -168,12 +168,12 @@
                 <hr>
                 <button type="submit" class="btn btn-primary">Зберегти</button>
             </div>
-        </div>
+        </div>-->
     </div>
-    <div class="snippets">
+<!--    <div class="snippets">
         <div class="col-md-12">
             <div class="col-md-9 fileName"></div>
             <div class="col-md-3 fileSize"></div>
         </div>
-    </div>
+    </div>-->
 </div>
