--- a/src/main/webapp/fragments/managedepartments.html
+++ b/src/main/webapp/fragments/managedepartments.html
@@ -7,6 +7,11 @@
     </div>
     <div class="row">
         <div class="col-lg-12">
+            <a href="#" class="addDepartment btn btn-primary pull-right"><i class="glyphicon glyphicon-plus"></i> Додати новий департамент</a>
+        </div> 
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
             <div class="table-responsive">
                 <table class="table table-hover">
                     <thead>
@@ -15,21 +20,45 @@
                             <th>Назва відділу</th>
                             <th>Керівник</th>
                             <th>Контактна інформація</th>
+                            <th>Дії</th>
                         </tr>
                     </thead>
                     <tbody>
-                        
+
                     </tbody>
                 </table>
             </div>
         </div>
     </div>
     <div class="snippets">
-        <tr>
-            <td class="index"></td>
-            <td class="name"></td>
-            <td class="director"></td>
-            <td class="contactInfo"></td>
-        </tr>
+        <table>
+            <tr>
+                <td class="index"></td>
+                <td class="name"></td>
+                <td class="director"></td>
+                <td class="contactInfo"></td>
+                <td class="actions">
+                    <a href="#"><i class="glyphicon glyphicon-pencil"></i></a>
+                    <a href="#"><i class="glyphicon glyphicon-remove"></i></a>
+                </td>
+            </tr>
+        </table>
+        <div class="removeContent">
+            <h3>Ви дійсно бажаєте видалити департамент?</h3>
+        </div>
+        <form class="addNewDepartment" role="form">
+            <div class="form-group">
+                <label for="deparmtentName">Назва департаменту</label>
+                <input type="text" name="deparmtentName" required="true" class="form-control" id="deparmtentName" placeholder="Назва департаменту">
+            </div>
+            <div class="form-group">
+                <label for="deparmtentDirector">Керівник департаменту</label>
+                <input type="text" name="deparmtentDirector" required="true" class="form-control" id="deparmtentDirector" placeholder="Керівник департаменту">
+            </div>
+            <div class="form-group">
+                <label for="deparmtentContactInfo">Контакнта інформація департаменту</label>
+                <input type="text" name="deparmtentContactInfo" required="true" class="form-control" id="deparmtentContactInfo" placeholder="Контакнта інформація департаменту">
+            </div>
+        </form>
     </div>
 </div>
