Implemented add user logic and show user table

--- a/src/main/webapp/fragments/usermanagment.html
+++ b/src/main/webapp/fragments/usermanagment.html
@@ -43,44 +43,19 @@
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                            <th>#</th>
-                            <th>Table heading</th>
-                            <th>Table heading</th>
-                            <th>Table heading</th>
-                            <th>Table heading</th>
-                            <th>Table heading</th>
-                            <th>Table heading</th>
+                            <th>Таб.<br>ном.</th>
+                            <th>ПІБ</th>
+                            <th>Відділ</th>
+                            <th>Дом. номер<br>телефону</th>
+                            <th>Роб. номер<br>телефону</th>
+                            <th>Email</th>
+                            <th>Домашня адреса</th>
+                            <th>Дата офіційного <br>влаштуван.</th>
+                            <th>Дата <br>народження</th>
+                            <th>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>1</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                            <td>Table cell</td>
-                        </tr>
-                    </tbody>
+                    <tbody></tbody>
                 </table>
             </div>
         </div>
@@ -242,10 +217,30 @@
                 <div class="row">
                     <div class="col-md-12">
                         <hr>
-                        <button type="submit" class="btn btn-primary">Зберегти</button>
+                        <button type="submit" class="btn btn-primary ">Зберегти</button>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="snippets">
+        <table class="userRowSnippet">
+            <tr>
+                <td class="index"></td>
+                <td class="name"></td>
+                <td class="department"></td>
+                <td class="homePhoneNumber"></td>
+                <td class="workPhoneNumber"></td>
+                <td class="email"></td>
+                <td class="homeAdress"></td>
+                <td class="dateOfOfficialArrangment"></td>
+                <td class="birthData"></td>
+                <td class="action">
+                    <a href="#"><i class="glyphicon glyphicon-open"></i></a>
+                    <a href="#"><i class="glyphicon glyphicon-pencil"></i></a>
+                    <a href="#"><i class="glyphicon glyphicon-remove"></i></a>
+                </td>
+            </tr>
+        </table> 
     </div>
 </div>
