--- a/src/main/webapp/fragments/usermanagment.html
+++ b/src/main/webapp/fragments/usermanagment.html
@@ -236,9 +236,9 @@
                 <td class="dateOfOfficialArrangment"></td>
                 <td class="birthData"></td>
                 <td class="action">
-                    <a href="#"><i class="glyphicon glyphicon-open"></i></a>
-                    <a href="#"><i class="glyphicon glyphicon-pencil"></i></a>
-                    <a href="#"><i class="glyphicon glyphicon-remove"></i></a>
+                    <a href="#" class="view"><i class="glyphicon glyphicon-open"></i></a>
+                    <a href="#" class="edit"><i class="glyphicon glyphicon-pencil"></i></a>
+                    <a href="#" class="remove"><i class="glyphicon glyphicon-remove"></i></a>
                 </td>
             </tr>
         </table> 
