--- a/src/main/webapp/sass/style.scss
+++ b/src/main/webapp/sass/style.scss
@@ -28,9 +28,9 @@ table { border-collapse: collapse; }
 
 .percent { position: absolute; width: 300px; height: 14px; z-index: 1; text-align: center; font-size: 0.8em; color: white; }
 
-.progress-bar { width: 300px; height: 14px; border-radius: 10px; border: 1px solid #CCC; background-image: -webkit-gradient(linear, left top, left bottom, from(#6666cc), to(#4b4b95)); border-image: initial; }
+.progress-bar { width: 300px; height: 14px; @include border-radius( 10px ); border: 1px solid #CCC; background-image: -webkit-gradient(linear, left top, left bottom, from(#6666cc), to(#4b4b95)); border-image: initial; }
 
-.uploaded { padding: 0; height: 14px; border-radius: 10px; background-image: -webkit-gradient(linear, left top, left bottom, from(#66cc00), to(#4b9500)); border-image: initial; }
+.uploaded { padding: 0; height: 14px; @include border-radius( 10px ); background-image: -webkit-gradient(linear, left top, left bottom, from(#66cc00), to(#4b9500)); border-image: initial; }
 
 .dropbox { width: 100%; height: 3em; border: 2px solid #DDD; border-radius: 8px; background-color: #FEFFEC; text-align: center; color: #BBB; font-size: 2em; font-family: Arial, sans-serif;
     span { margin-top: 0.9em; display: block; }
@@ -41,3 +41,23 @@ table { border-collapse: collapse; }
 input[type="range"].form-control { margin-left: 10px; width: auto; height: auto; padding: 0; font-size: 0; line-height: auto; vertical-align: middle; background-color: #ffffff; border: none; border-radius: 4px; @include box-shadow( none ); }
 
 #profile .highlight img { width: 100%; @include border-radius( 4px ); @include single-box-shadow; }
+
+.loadingIcon { -webkit-animation: spinPulse 2s linear infinite; -moz-animation: spinPulse 2s linear infinite; animation: spinPulse 2s linear infinite; }
+
+@-moz-keyframes spinPulse {
+    0% {
+        -moz-transform: rotate(160deg);
+        opacity: 0;
+        box-shadow: 0 0 1px #2187e7;
+    }
+
+    50% {
+        -moz-transform: rotate(145deg);
+        opacity: 1;
+    }
+
+    100% {
+        -moz-transform: rotate(-320deg);
+        opacity: 0;
+    };
+}
