Implemented update user

--- a/src/main/webapp/fragments/usermanagment.html
+++ b/src/main/webapp/fragments/usermanagment.html
@@ -189,6 +189,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <button type="submit" class="btn btn-primary">Додати</button>
+                        <button type="submit" class="btn btn-default hidden">Відмінити</button>
                     </div>
                 </div>
             </form>
@@ -236,7 +237,7 @@
                 <td class="dateOfOfficialArrangment"></td>
                 <td class="birthData"></td>
                 <td class="action">
-                    <a href="#" class="view"><i class="glyphicon glyphicon-open"></i></a>
+                    <a href="#" class="view"><i class="glyphicon glyphicon-eye-open"></i></a>
                     <a href="#" class="edit"><i class="glyphicon glyphicon-pencil"></i></a>
                     <a href="#" class="remove"><i class="glyphicon glyphicon-remove"></i></a>
                 </td>
