--- a/src/main/webapp/fragments/usermanagment.html
+++ b/src/main/webapp/fragments/usermanagment.html
@@ -10,29 +10,19 @@
     <br>
     <div class="row searchForm">
         <div class="col-lg-12">
-            <form class="form-inline">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="amoutOfUsers">Кількість працівників на сторінцу</label>
-                        <input type="range" name="amoutOfUsers" class="form-control" id="amoutOfUsers">
-                    </div>
+            <form class="form-inline" role="form">
+                <div class="form-group col-md-6">
+                    <label class="sr-only" for="departments">Відділи</label>
+                    <select class="form-control" name="departments" id="departments">
+                        <option value="all">Відділи</option>
+                    </select>
                 </div>
-                <div class="col-md-6">
-                    <form class="form-inline" role="form">
-                        <div class="form-group col-md-4">
-                            <label class="sr-only" for="departments">Відділи</label>
-                            <select class="form-control" name="departments" id="departments">
-                                <option value="none">Відділи</option>
-                            </select>
-                        </div>
-                        <div class="form-group col-md-8">
-                            <label class="sr-only" for="userName">Пошук</label>
-                            <div class="input-group">
-                                <input type="text" class="form-control" name="userName" id="userName">
-                                <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-                            </div>
-                        </div>
-                    </form>
+                <div class="form-group col-md-6">
+                    <label class="sr-only" for="userName">Пошук</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" name="userName" id="userName">
+                        <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+                    </div>
                 </div>
             </form>
         </div>
@@ -57,6 +47,7 @@
                     </thead>
                     <tbody></tbody>
                 </table>
+                <h3 class="hidden usersNotFound">Користувачів не знайдено</h3>
             </div>
         </div>
     </div>
