--- a/src/main/webapp/fragments/usermanagment.html
+++ b/src/main/webapp/fragments/usermanagment.html
@@ -9,23 +9,21 @@
     </div>
     <br>
     <div class="row searchForm">
-        <div class="col-lg-12">
-            <form class="form-inline" role="form">
-                <div class="form-group col-md-6">
-                    <label class="sr-only" for="departments">Відділи</label>
-                    <select class="form-control" name="departments" id="departments">
-                        <option value="all">Відділи</option>
-                    </select>
+        <form class="form-inline" role="form">
+            <div class="form-group col-md-6">
+                <label class="sr-only" for="departments">Відділи</label>
+                <select class="form-control" name="departments" id="departments">
+                    <option value="all">Відділи</option>
+                </select>
+            </div>
+            <div class="form-group col-md-6">
+                <label class="sr-only" for="userName">Пошук</label>
+                <div class="input-group">
+                    <input type="text" class="form-control" name="userName" id="userName" placeholder="Введіть ПІБ особи">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
                 </div>
-                <div class="form-group col-md-6">
-                    <label class="sr-only" for="userName">Пошук</label>
-                    <div class="input-group">
-                        <input type="text" class="form-control" name="userName" id="userName">
-                        <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-                    </div>
-                </div>
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
     <div class="row usersContainer">
         <div class="col-lg-12 users">
