Implemented user roles permission

--- a/src/main/webapp/fragments/usermanagment.html
+++ b/src/main/webapp/fragments/usermanagment.html
@@ -1,4 +1,4 @@
-<div id="userManagment">
+<div id="user-managment">
     <div class="row">
         <div class="col-lg-12">
             <ul class="nav nav-tabs">
@@ -165,14 +165,6 @@
                             <ul class="list-group possibleRols"></ul>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <label >Список ролей які має користувач *</label>
-                        <ul class="list-group userRols">
-                            <li class="list-group-item default">
-                                <span >У даного користувача покащо немає ролей</span>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
@@ -259,9 +251,11 @@
             </tr>
         </table>
         <a href="#" class="list-group-item "></a>
-        <li class="list-group-item roleSnippet">
-            <a href="#" class="badge">»</a>
-            <span ></span>
-        </li>
+        <ul>
+            <li class="list-group-item roleSnippet possible">
+                <input type="checkbox">
+                <label></label>
+            </li>
+        </ul>
     </div>
 </div>
